# Remove_ROS_VINS

camera_model/include/camodocal/calib/: CameraCalibration.h
camera_model/include/camodocal/camera_models/: Camera.h  CameraFactory.h  CataCamera.h  CostFunctionFactory.h  EquidistantCamera.h  PinholeCamera.h  ScaramuzzaCamera.h
camera_model/include/camodocal/chessboard/: Chessboard.h  ChessboardCorner.h  ChessboardQuad.h  Spline.h
camera_model/include/camodocal/gpl/: EigenQuaternionParameterization.h  EigenUtils.h  gpl.h
camera_model/include/camodocal/sparse_graph/: Transform.h
camera_model/src/calib/: CameraCalibration.cc
camera_model/src/camera_models/: Camera.cc  CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc
camera_model/src/chessboard/: Chessboard.cc
camera_model/src/gpl/: EigenQuaternionParameterization.cc  gpl.cc
camera_model/src/sparse_graph/: Transform.cc
config/euroc/: euroc_config.yaml  vins_result.csv
include/: Header.h  Time.h
vins_estimator/: CMakeLists.txt
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/back_end/: edge.cpp  edge.h  loss_function.h  vertex.cpp  vertex.h
vins_estimator/src/example/: estimator_node.cpp  estimator_visualization.cpp  estimator_without_loop.cpp
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h
vins_estimator/src/feature_tracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/loop-closure/: demoDetector.h  keyframe.cpp  keyframe_database.cpp  keyframe_database.h
vins_estimator/src/loop_closure/: TemplatedLoopDetector.h  demoDetector.h  keyframe.cpp  keyframe.h  keyframe_database.cpp  keyframe_database.h  loop_closure.cpp  loop_closure.h
vins_estimator/src/utility/: print.cpp  print.h  visualization.cpp  visualization.h
